Missing txid metadata (#24)
* Logs for debugging

* Logs for testing

* Moving metada data map creation from complete message to written message

* All add all topic partitons to written message

* All add all topic partitons to written message

* All add all topic partitons to written message

* Check style fix